--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple XMPP endpoint for components to connect to",
   "main": "src/app.js",
   "scripts": {
+    "start" : "node src/app.js",
     "test": "standard"
   },
   "author": "",
