a call to get stanzas will block until something has been written or 10 seconds have passed

--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "description": "A simple XMPP endpoint for components to connect to",
   "main": "src/app.js",
   "scripts": {
-    "start" : "node src/app.js",
+    "start": "node src/app.js",
     "test": "standard && mocha test/*.spec.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-xmpp-server": "^2.1.2",
+    "ewait": "^0.2.1",
     "express": "^4.13.4",
     "morgan": "^1.6.1",
-    "nedb": "^1.7.2"
+    "nedb": "^1.7.2",
+    "node-xmpp-server": "^2.1.2"
   },
   "standard": {
-  "globals": [
-    "it",
-    "describe",
-    "beforeEach"
-  ]
-}
+    "globals": [
+      "it",
+      "describe",
+      "beforeEach"
+    ]
+  }
 }
