--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: node_js
 node_js:
   - "5.7.1"
 
+addons:
+    code_climate:
+        repo_token: 0f7acc4413dd48072003263795e33f3481395fdb8d6664638bfef5369899446a
+
 before_script:
   - npm install -g standard
   - npm install -g mocha
 
-addons:
-    code_climate:
-        repo_token: 0f7acc4413dd48072003263795e33f3481395fdb8d6664638bfef5369899446a
+after_script:
+  - codeclimate-test-reporter < lcov.info
