--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "test": "standard && mocha test/*.spec.js"
+    "test": "standard && mocha test/*.spec.js",
+    "lint": "eslint src/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,5 +25,11 @@
       "describe",
       "beforeEach"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "eslint": "^2.3.0"
   }
 }
