--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^2.3.0",
     "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-mocha": "^2.0.0",
     "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-standard": "^1.3.2",
-    "eslint": "^2.3.0"
+    "eslint-plugin-standard": "^1.3.2"
   }
 }
